# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.20.1] - 2024-10-06

### Fixed

- Não é mais possível trocar missões diárias já finalizadas. - Reportado por @mareys e @0_tal_do_mabs


## [5.20.0] - 2024-10-01

### Added

- Novo comando: **Pedra, Papel e Tesoura**. Jogue contra seus amigos, e se quiser aposte estrelinhas! - Sugerido por @maycon.orp
- Novo comando: **Estatísticas de Pedra Papel e Tesoura**. Veja as estatísticas de jogos de pedra, papel e tesoura de usuários com `/estatísticas pedra_papel_tesoura`.

### Changed

- O comando `/Transações` agora permite filtrar por jogos de pedra papel e tesoura. Também, não é mais possível filtrar por Transações de "o mestre mandou".

## [5.19.0] - 2024-09-29

### Added

- Criado um top de rolls no `/top diversos`. - Sugerido por @mich_solitario. 
- Trocar missões diárias! Agora é possível mudar uma de suas missões diárias. Missões trocadas não dão prêmios em estrelinhas, mas ainda dão o bônus especial. - Sugerido por @mich_solitario.
- Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.
- Criado um top de missões diárias no `/top diversos`. Apenas as dailies finalizadas após o lançamento desta versão contam.

### Changed

- A Menhera não busca mais pelo nome dos usuários das 3 primeiras páginas dos `/top`. 

## [5.18.0] - 2024-06-08

### Added

- Adicionado dois novos tipos de daily: **colher plantas** e **finalizar entregas**.
- Adicionado 41 novos gifs aos comandos de ação (Obg @mareys e @dszalone).

### Changed

- O limite máximo de peso para uma entrega do caminhão da fazendinha foi reduzido para `10 Kg`.
- O número de entregas por dia foi reduzido para `6`.
- O prêmio por finalizar todas entregas foi alterado para **30000** estrelinhas fixas.

### Fixed
