@@ -269,7 +269,7 @@
     "10": "Mint",
     "11": "Watermelon",
     "12": "Strawberry",
-    "13": "Pepper",
+    "13": "Cempasúchil",
     "14": "Eggplant",
     "15": "Avocado",
     "16": "Mango",
