@@ -269,7 +269,7 @@
     "10": "Menta",
     "11": "Melancia",
     "12": "Morango",
-    "13": "Pimenta",
+    "13": "Cempasúchil",
     "14": "Berinjela",
     "15": "Abacate",
     "16": "Manga",
